latex setup change

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,20 @@ __pycache__/
 input.txt
 env/
 venv/
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.lof
+*.log
+*.lot
+*.nav
+*.out
+*.run.xml
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdv
